# SOLAR

./: .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  LICENSE  Makefile  Modularization.ipynb  README.md  SECURITY.md  Testing.ipynb  cloudbuild.sh  cloudbuild.yaml  high-ace-455819-n8-8520417fd0c7.json  meeting_notes.md  policy.yaml  pyproject.toml  pytest.ini  requirements.txt  sdo_data.dvc  setup.py
.dvc/: config
.github/: run_local.sh
.github/actions/run-audit/: action.yml
.github/actions/run-format/: action.yml
.github/actions/run-lint/: action.yml
.github/actions/run-tests/: action.yml
.github/actions/setup-python/: action.yml
.github/actions/upload-reports/: action.yml
.github/scripts/: apply_formatting.sh  do_formatting.sh  linting.sh  message-handler.sh  run_linting.sh  validate_formatting.sh  validation_requirements.txt
.github/workflows/: main.yml  pr-checks.yml  scheduled-monitoring.yml
API/: .dockerignore  Dockerfile  README.md  requirements.txt
API/app/: main.py
API/app/api/: routes.py
API/app/config/: settings.py
API/app/models/: schemas.py
API/app/services/: image_processor.py  logic.py
API/test/testing_input/: 2025_05_01__00_00_23_121__SDO_AIA_AIA_94.jp2  2025_05_02__00_00_28_835__SDO_AIA_AIA_193.jp2  2025_05_02__00_00_30_616__SDO_AIA_AIA_131.jp2
API/tests/: data_loader.py  model.py  pipeline.py  preprocess.py  testing_pipeline.ipynb  visualization.py
Solar_eda_project/src/first_clustering_resize/: analysis.py  download_sdo.py  notes.md  python_description.md
ci/: run_local.sh
ci/requirements/: validation_requirements.txt
ci/scripts/: apply_formatting.sh  handle_messages.sh  integration_tests.sh  run_linting.sh  validate_formatting.sh  validation_requirements.txt
config/: dvc_command.txt
google-cloud-sdk/.install/: bq-nix.snapshot.json  bq.snapshot.json  core-nix.snapshot.json  core.snapshot.json  gcloud-crc32c-darwin-x86_64.snapshot.json  gcloud-crc32c.snapshot.json  gcloud-deps-darwin-x86_64.snapshot.json  gcloud-deps.snapshot.json  gcloud.snapshot.json  gsutil-nix.snapshot.json  gsutil.snapshot.json
junit/: test-results-integration.xml
notebooks/eda_clustering/GMM/: GMM_pixeles.py  metrics.py
notebooks/first_clustering_resize/: analisys.ipynb  analysis.py  download_sdo.py  notes.md  python_description.md  test_plot.py
scheduled_processing/: Dockerfile  cloudbuild.yaml  main.py  requirements.txt
scripts/: run_kmeans_pipeline.py
src/Models/: NormalizingFlows_Anomaly_detection01 copy.ipynb  pipeline.py  preprocessing_convolutions.ipynb
src/data_prep/: download_sdo_data.py  visualizar_fits.py  x.py
src/model_test/: NormalizingFlows_Anomaly_detection01 copy.ipynb  preprocessing_convolutions.ipynb
src/solar/: pipeline.py  run_kmeans_pipeline.py
src/utils/: plotting.py  utils.py
test/: test_example.py
test/integration_test/: test_sample.py
tmp/: analysis.py  download_sdo.py  notes.md  python_description.md
(+59 files in other folders)
