[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# ─── Project Metadata ────────────────────────────────────────────────────────

[project]
name = "solar"
version = "0.2.0"
description = "Solar Observer Learning Anomaly Recognition — unsupervised anomaly detection in SDO/AIA solar imagery"
readme = "README.md"
license = { text = "Academic Free License v3.0" }
requires-python = ">=3.12"
authors = [
    { name = "Alyona Carolina Ivanova Araujo", email = "alyonacia@gmail.com" },
]
keywords = ["solar", "anomaly-detection", "SDO", "AIA", "unsupervised-learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "numpy>=2.0",
    "scikit-learn>=1.4",
    "scikit-image>=0.22",
    "matplotlib>=3.9",
    "sunpy[net,image]>=6.0",
    "astropy>=6.0",
    "imageio>=2.19",
    "glymur>=0.9",
    "tqdm>=4.64",
    "pillow>=11.0",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.0",
    "python-multipart>=0.0.9",
    "google-cloud-storage>=2.9",
]
dev = [
    "ruff>=0.8",
    "mypy>=1.13",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "bandit>=1.7",
]

[project.urls]
Repository = "https://github.com/AlyonaCIA/SOLAR"
Issues = "https://github.com/AlyonaCIA/SOLAR/issues"

# ─── Tool Configuration ──────────────────────────────────────────────────────

[tool.ruff]
target-version = "py312"
line-length = 120
src = ["src", "API/app", "test"]
exclude = ["notebooks/", "datos/"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "E402",   # module-level import not at top (common in scripts/notebooks)
    "E741",   # ambiguous variable name (l, O, I) — common in scientific code
    "B008",   # do not perform function calls in argument defaults
    "B905",   # zip() without strict= — too noisy for scientific code
    "SIM108", # use ternary operator
]

[tool.ruff.lint.isort]
known-first-party = ["src", "solar"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"
